--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="logo">
             <img src="img/Logo.png" alt="This is Logo">
         </div>
-        <ul id="list">
+        <ul id="menu-list">
             <li class="list-item"><a class="active" href="#">Home</a></li>
             <li class="list-item"><a href="#">Female</a></li>
             <li class="list-item"><a href="#">Male</a></li>
